src/objects/Proposal_Team__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Toward_Target__c</fullName>
        <formula>Percentage_Split__c *Funding_Record_Name__r.ExpectedRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Toward Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Toward_Fiscal_Year__c</fullName>
        <label>Applied Toward Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Record_Name__c</fullName>
        <label>Funding Record Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposal Team</relationshipLabel>
        <relationshipName>Proposal_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percentage_Split__c</fullName>
        <label>Percentage Split</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposal_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposal_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Relationship Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding/Proposal Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moves Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Advisor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Allocation_All_Years__c</fullName>
        <inlineHelpText>Total Allocated to this individual for all years</inlineHelpText>
        <label>Total Allocation (All Years)</label>
        <summarizedField>Proposal_Team_Calc__c.Allocated_Amount__c</summarizedField>
        <summaryForeignKey>Proposal_Team_Calc__c.Proposal_Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Proposal Team</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Link to Detail Records</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>